--- a/index2.html
+++ b/index2.html
@@ -381,7 +381,7 @@ console.log( "event = " + event)
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Carte</a>
+            <a class="nav-item nav-link" href="#">Carte</a>
             <a class="nav-item nav-link" href="#">Préférences</a>
             <a class="nav-item nav-link" href="#">Connexion</a>
             <a class="nav-item nav-link" href="#">Création compte</a>
